update queue mgr
